Update on Overleaf.

--- a/chapterAPPX_EMIS_trends.tex
+++ b/chapterAPPX_EMIS_trends.tex
@@ -14,11 +14,10 @@ W-90\degrees E longitude.\\
 
 The land-based emissions for 2000--2019  have been derived from the  2021 official data submissions to UNECE CLRTAP \citep{CEIP2021}.
 For primary PM in 2019, two different sets of emissions have been used: 1) EMEP emissions as prepared by CEIP based on the official data submissions
-for 2019, and 2) EMEP PM emissions where condensable organics from small-scale com-
-bustion are accounted for by using expert emission estimates for GNFR sector C from the
+for 2019, and 2) EMEP PM emissions where condensable organics from small-scale combustion are accounted for by using expert emission estimates for GNFR sector C from the
 TNO REF2.1 data set for the following countries: Albania, Austria, Bosnia and Herzegovina,
 Belarus, Switzerland, Cyprus, Germany, Estonia, France, Ireland, Lithuania, Montenegro,
-Poland, Russian Federation, Slovakia, Turkey and Ukraine. In this report 1) is referred to as EMEP and 2) is referred to as EMEPwREf2.1C.\\
+Poland, Russian Federation, Slovakia, Turkey and Ukraine. In this report 1) is referred to as EMEP and 2) is referred to as EMEPwREF2.1C.\\
 
 Emissions from international shipping occurring in different European seas within the EMEP domain are not reported to UNECE CLRTAP, but derived from other sources. This year, emissions for the sea regions are based on the CAMS global shipping emission dataset \citep{CAMSemis2019,ECCAD} for the years 2000 to 2019, developed by the Finish Meteorological Institute using AIS (Automatic Identification System) tracking data.\\
 
