--- a/report.tex
+++ b/report.tex
@@ -39,6 +39,7 @@
 \usepackage{amsmath}
 \usepackage{ifthen}                   % \ifthenelse command
 \usepackage{xspace}                   % adds space only when needed
+\usepackage{hyphenat}                 % \hyph avoid overfull hbox
 \usepackage[version=3]{mhchem}        % chemical molecular formulae, e.g. \ce{H2O}
 %\usepackage{fancyhdrs}               % old version of fancyheadings
 \usepackage{fancyhdr}                 %  Works with texlive
@@ -334,7 +335,7 @@
 %%%%%%%%%%%%%%%%% Compile ONLY selected Chapters %%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %\includeonly{acknow}
-%\includeonly{chapterEmis2019,chapterTrendsSandN,chapterEMEPModelUpdates}
+%\includeonly{chapterStatus2019,chapterTrendsSandN,chapterEMEPModelUpdates}
 %\includeonly{chapterMeasurementDevelopments}
 
 %Please:if you use includeonly on overleaf, just do it temporary and set it back after you have compiled (since others will only see 'your chapter')
