--- a/chapterAPPX_trends.tex
+++ b/chapterAPPX_trends.tex
@@ -8,12 +8,11 @@
 
 \clearpage
 
-\begin{table}
-\caption{\label{tab:sites_trend} The sites used in the trend calculations for the different components and periods, x: 2000-2019, a: 2005-2019, b: 2000-2010, c: 2010-2019}
-
- \centering
-\scalebox{0.65}{%
-\begin{tabular}{l|cccccccccccccccc}
+\centering{
+%\scalebox{0.65}{%
+\scriptsize{
+\begin{longtable}{l|cccccccccccccccc}
+\caption{\label{tab:sites_trend} The sites used in the trend calculations for the different components and periods, x: 2000-2019, a: 2005-2019, b: 2000-2010, c: 2010-2019}\\
 \toprule
            Code & O$_{3}$ & \soii & SO$_{4}$pm & SO$_{4}$dep & \noii & totNO$_{3}$ & NO$_{3}$pm & HNO$_{3}$ & NO$_{3}$dep & totNH$_{4}$ & NH$_{4}$pm & NH$_{3}$ & NH$_{4}$dep & \PM[10] & \PM[2.5] & EC/OC \\
 \midrule
@@ -163,14 +162,14 @@ SE0011(20)R &  x &   x &    x &      x &   x &    x &    x &    x &      x &    
         SK0006R &  x &   x &    x &      x &   x &    - &    - &    - &      x &    - &    a &   - &      x &    a &    - &     - \\
         SK0007R &  x &   - &    - &      x &   - &    - &    - &    - &      x &    - &    - &   - &      x &    a &    - &     - \\
 \bottomrule
- \end{tabular}
+\end{longtable}
  }
- \end{table}
+ }
 
-\bibliographystyle{copernicus}
-\renewcommand\bibname{References}    % Crude - set Bibliography to References
-\addcontentsline{toc}{section}{References}
+%\bibliographystyle{copernicus}
+%\renewcommand\bibname{References}    % Crude - set Bibliography to References
+%\addcontentsline{toc}{section}{References}
 %ORIG: \bibliography{bibrefs}
-\bibliography{Refs,EMEP_Reports}
+%\bibliography{Refs,EMEP_Reports}
 
 \cleartoleftpage
