--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -616,21 +616,35 @@ Summarizing trend results for the 2000-2019 period, the average \PM[10] and \PM[
 
 \section{\label{sec:Trends_O3}Trends in O$_3$ }
 
-Trend studies of surface ozone requires a somewhat different approach than other species since ambient ozone levels are the result of a baseline level with episodes on top. Additionally, in winter, NOx emissions tend to reduce ozone by titration. Thus, the selection of ozone metrics is decisive for the estimated trends (ref e.g. Lefohn - TOAR). A common procedure is to look at the trend in the probability distribution of ozone, e.g. by calculating trends for various percentiles of the distribution.  
+Trend studies of surface ozone requires a somewhat different approach than other species since ambient ozone levels are the result of a substantial baseline level with episodes on top. Whereas NOx leads to ozone formation in the summer season it could cause depletion of ozone by titration in winter. Thus, the effect of man-made emissions of ozone precursors as NOx (in combination with VOCs) is to change the distribution of hourly and daily ozone concentrations during a year with high ozone levels in the summer half year and low ozone levels in the winter half year. Furthermore, the extent of these perturbations is significantly determined by the weather conditions and thereby by the ongoing climate change. Harmful levels of surface ozone is closely linked to high-pressure situations with elevated temperatures and strong solar radiation.
+
+Thus, the selection of ozone metrics is decisive for the estimated trends (ref e.g. Lefohn - TOAR). The annual mean concentration used for evaluating other species is of little interest when studying ozone. A common procedure is to look at the trend in the probability distribution of ozone, e.g. by calculating trends for various percentiles of the distribution.  
 
 As explained above, the trends in six percentiles (10, 50, 75, 95, 98 and 99) of the daily maximum O$_3$ values were calculated for stations with at least 330 valid daily data each year. This corresponds to 90 \% data capture in the individual years. The 10th percentile corresponds to the 37th lowest daily maximum value while the 99th percentile corresponds to the 4th highest daily maximum. 
 
-Figure \ref{fig:O3_boxplot} shows the calculated trends (i.e. Sen's slopes) for these six percentiles for the period 2000-2019 for EMEP sites north and south of 49 \degrees N based on observed and modelled data. Both significant and non-significant trend values were included, but stations above 1200 m altitude were not included in the trend statistics. The reason for differing the altitude criteria for trend calculations vs that for evaluating the 2019 levels (1200 m vs 500 m) was that the latter is more focused on individual daily data whereas the trends are based on more aggregated statistics (annual data). 
+Figure \ref{fig:O3_boxplot} shows the calculated Sen's slopes for these six percentiles for the period 2000-2019 for EMEP sites north and south of 49 \degrees N based on observed and modelled data. Both significant and non-significant slopes were included, but stations above 1200 m altitude were not included in the trend statistics. The reason for differing the altitude criteria for trend calculations vs that for evaluating the 2019 levels as discussed in Ch 2.4 (1200 m vs 500 m) was that the latter is more focused on individual daily data whereas the trends are based on aggregated statistics (annual data). 
 
-For both the observed and modelled data the trends show an increase in the 10th percentile and a gradually stronger decrease in the higher percentiles. This is as expected when the emission of precursors (NOx) is reduced with time. The increase in the 10th percentile is explained by reduced titration by NOx (mainly seen in winter) while the the decreasing trend in the highest percentiles is explained by reduced photochemical formation of ozone. The net result of these trends is a narrowing of the distribution of O$_3$ concentrations. 
+For both the observed and modelled data the trends show an increase in the 10th percentile and with a gradually stronger decrease in the higher percentiles. This is as expected when the emission of precursors (NOx) is reduced with time. The increase in the 10th percentile is explained by reduced titration by NOx while the the decreasing trend in the highest percentiles is explained by reduced photochemical formation of ozone in summer. The net result of these trends is a narrowing of the distribution of O$_3$ concentrations. 
 
-Figure \ref{fig:O3_boxplot} indicates that the model overestimates the decrease of the 99 percentile for stations south of 49 \degrees N and overestimates the increase in the 10th percentile in both regions. As explained above, the relative trend values shown in Figure \ref{fig:O3_boxplot} are based on the Sen's slopes and use the value of these trend lines the first year (i.e. 2000) as the reference for modelled and observed data separately. The results given in Figure \ref{fig:O3_boxplot} thus show the estimated relative changes without any reference to the absolute levels of the modelled and observed data. 
+Figure \ref{fig:O3_boxplot} indicates that the model overestimates somewhat the decrease of the high percentiles (95-99) for stations south of 49 \degrees N while it agrees very well with the observations for the high percentiles for stations N of 49 \degrees N. This is an important finding since these percentiles are the main indicators for surface ozone pollution events. Figure \ref{fig:O3_boxplot} furthermore shows that the spread in the observed data is significantly larger than the spread in modelled data which is as expected. A grid model will inevitably reduce local geographical differences and produce smoothed concentrations fields. 
 
-The annual O$_3$ percentile values for the observed and modelled data during 2000-2019 are shown in Figures \ref{fig:O3_perctrends_N} and \ref{fig:O3_perctrends_S} for stations north and south of 49 \degrees N. The solid lines mark the mean of all stations while the shaded areas mark the 25th and 75th percentile of these station-based values. These results show that the modelled 10th and 50th percentiles are higher than observed whereas the observed high percentiles (95-99) are higher than modelled. The bias in the high percentiles are particularly strong for stations south of 49 \degrees N. For the 75th percentile, the absolute levels of the modelled and observed data agree very well. It is furthermore seen that the interannual variation in the higher percentiles, i.e. the change in levels from year to year, is very well reproduced by the model but with a substantial offset. 
+For the 10th percentile, the model overestimates the increase both north and south of 49 \degrees N. It is not obvious what this overestimation is due to. It could reflect that NOx in winter is not reduced as much as the emissions and model assume, or it could e.g. reflect deficiencies in the model description of atmospheric vertical stability and exchange of pollutants in winter. 
+
+The relative trends shown in Figure \ref{fig:O3_boxplot} are based on the Sen's slopes and use the value of these trend lines the first year (i.e. in 2000) as the reference for the modelled and observed data separately. The results given in Figure \ref{fig:O3_boxplot} thus show the estimated relative changes without any reference to the absolute levels of the modelled and observed data. 
+
+The trends in the absolute levels are given in Figures \ref{fig:O3_perctrends_N} and \ref{fig:O3_perctrends_S}. Annual O$_3$ percentile values for the observed and modelled data during 2000-2019 are shown in Figures \ref{fig:O3_perctrends_N} and \ref{fig:O3_perctrends_S} for stations north and south of 49 \degrees N, respectively. The solid lines mark the mean of all stations while the shaded areas mark the 25th and 75th percentile of these station-based values. All stations below 1200 m asl and with at least 15 years of data were included. 
+
+These results show that the modelled 10th and 50th percentiles are higher than the observations whereas the observed high percentiles (95-99) are higher than modelled. The bias in the high percentiles are particularly strong for stations south of 49 \degrees N. For the 75th percentile, the absolute levels of the modelled and observed data agree very well. 
+
+The interannual variation in the higher percentiles, i.e. the change in levels from year to year, is however very well reproduced by the model. Peak years as 2003 and 2006 in both regions as well as 2015 in the south and 2018 and 2019 in the north is reproduced by the model but with a substantial offset. This implies that the episodes leading to the peak values are captured by the model but that the ozone levels during the episodes are underestimated. 
+
+Trends in ozone metrics linked to harmful effects on vegetation (AOT40) and on human health (SOMO35) are shown in Figures \ref{fig:O3_aot40croptrends} - \ref{fig:O3_somo35trends} for sites north and south of 49 \degrees N, respectively. The absolute levels of these metrics are very sensitive to the baseline O$_3$ concentration level which is close to the 35-40 ppb range. Thus, comparisons between modelled and observed data could be difficult. 
+
+Figures \ref{fig:O3_aot40croptrends} and \ref{fig:O3_aot40foresttrends} show a clear underestimation by the model compared to the observed data, in particular for the southern sites. Both the modelled and observed data do however indicate a marked decreasing trend during 2000-2019. For SOMO35 (\ref{fig:O3_somo35trends}), the model calculations agree very well with the observed data, both with respect to the absolute levels and the trends. For the southern sites, a slight unedrestimation is seen in the peak years (2003 and 2018) though. 
 
 Summary statistics for the observed and modelled trends during 2000-2019 for the 75th and 99th percentiles as well as SOMO35, AOT40 for crops and AOT40 for forests are given in Table~\ref{tab:O3_stat} for sites north and south of 49 \degrees N. These data show the mean trend (as absolute values and relative to 2000 in percent) as calculated by the Theil-Sen's slope. The slopes for the percentiles were calculated by the pyaerocom tool as explained above while the slopes for SOMO35 and AOT40 were calculated by the R libraries 'Kendall' and 'zyp'. 
 
-In addition to the mean trends, the confidence intervals for these mean values are also given. The confidence intervals were computed by standard bootstrapping techniques using the R library 'boot' (basic bootstrap method with 1000 resamples). Various bootstrap method were applied and compared to direct calculations of the confidence intervals based on the sample mean and sample standard deviation. These comparisons showed that the various methods produced very similar estimates of the confidence intervals for the mean values. These confidence intervals could be used to judge if the mean observed trends differ from the mean modelled trends.
+In addition to the mean trends, the confidence intervals for these mean values are also given. The confidence intervals were computed by standard bootstrapping techniques using the R library 'boot' (basic bootstrap method with 1000 resamples). Various bootstrap method were tested out and compared to direct calculations of the confidence intervals based on the sample mean and sample standard deviation. These comparisons showed that the various methods produced very similar estimates of the confidence intervals for the mean values and thus we conclude that the confidence intervals for the means are fairly robust. These confidence intervals could be used to judge if the mean observed trends differ from the mean modelled trends.
 
 First of all, it is interesting to note that negative (downward) trends are found for all the five metrics both north and south of 49 \degrees N and for both observed and modelled data. This is a strong signal that there has been a real reduction in these ozone metrics during the 2000-2019 period. Furthermore, for sites north of 49 \degrees N, the results indicate that there are no significant difference between the observed and modelled trends in the 75th and 99th percentiles. For sites south of 49 \degrees N the mean absolute trends agree very well for the observed and modelled data, but the relative changes in the observations are clearly lower than the modelled changes (reflecting that the model underpredicts the absolute level of the high percentiles). It could be noted that the number of statistically significant trends are considerably lower for the observed data compared to the modelled ones. 
 
@@ -676,13 +690,13 @@ Period & Area & Parameter &           total & obs & mod &                    obs
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/alltrends_north_49_2000_2019_1200m.png}
-	\caption{\label{fig:O3_perctrends_N}Trends in annual percentiles of daily max O$_3$ from 2000-2019 for EMEP observations and model for sites north of 49 N: The solid line indicates the mean, and the shaded area marks the 25 and 75 percentile. Only sites below 1200 m asl and with at least 15 years of data are included.}
+	\caption{\label{fig:O3_perctrends_N}Trends in annual percentiles of daily max O$_3$ from 2000-2019 for EMEP observations and model calculations for sites north of 49 \degrees N: The solid line indicates the mean, and the shaded area marks the 25th and 75th percentile. Only sites below 1200 m asl and with at least 15 years of data are included.}
 \end{figure}
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/alltrends_south_49_2000_2019_1200m.png}
-	\caption{\label{fig:O3_perctrends_S}Trends in annual percentiles of daily max O$_3$ from 2000-2019 for EMEP observations and model for sites south of 49 N: The solid line indicates the mean, and the shaded area marks the 25 and 75 percentile. Only sites below 1200 m asl and with at least 15 years of data are included.}
+	\caption{\label{fig:O3_perctrends_S}Trends in annual percentiles of daily max O$_3$ from 2000-2019 for EMEP observations and model calculations for sites south of 49 \degrees N: The solid line indicates the mean, and the shaded area marks the 25th and 75th percentile. Only sites below 1200 m asl and with at least 15 years of data are included.}
 \end{figure}
 
 
@@ -692,19 +706,19 @@ Figures \ref{fig:O3_aot40croptrends} - \ref{fig:O3_somo35trends} show the statio
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/EUAOT40_Crops_2000_2019_1200m.png}
-	\caption{\label{fig:O3_aot40croptrends} Trends in 3-months AOT40 (May-July) O$_3$ for crops from 2000-2019 for EMEP observations and model for sites north (left) and south (right) of 49 N: The solid line indicates the mean, and the shaded area marks the 25 and 75 percentile. Only sites below 1200 m asl and with at least 15 years of data are included.}
+	\caption{\label{fig:O3_aot40croptrends} Trends in 3-months AOT40 (May-July) for crops from 2000-2019 for EMEP observations and model calculations for sites north (left) and south (right) of 49 \degrees N: The solid line indicates the mean, and the shaded area marks the 25th and 75th percentile. Only sites below 1200 m asl and with at least 15 years of data are included.}
 \end{figure}
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/EUAOT40_Forests_2000_2019_1200m.png}
-	\caption{\label{fig:O3_aot40foresttrends}Trends in 6-months AOT40 (Apr-Sep) O$_3$ for forests from 2000-2019 for EMEP observations and model for sites north (left) and south (right) of 49 N: The solid line indicates the mean, and the shaded area marks the 25 and 75 percentile. Only sites below 1200 m asl and with at least 15 years of data are included.}
+	\caption{\label{fig:O3_aot40foresttrends}Trends in 6-months AOT40 (Apr-Sep) for forests from 2000-2019 for EMEP observations and model calculations for sites north (left) and south (right) of 49 \degrees N: The solid line indicates the mean, and the shaded area marks the 25th and 75th percentile. Only sites below 1200 m asl and with at least 15 years of data are included.}
 \end{figure}
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/SOMO35_2000_2019_1200m.png}
-	\caption{\label{fig:O3_somo35trends}Trends in SOMO35 from 2000-2019 for EMEP observations and model for sites north (left) and south (right) of 49 N: The solid line indicates the mean, and the shaded area marks the 25 and 75 percentile. Only sites below 1200 m asl and with at least 15 years of data are included.}
+	\caption{\label{fig:O3_somo35trends}Trends in SOMO35 from 2000-2019 for EMEP observations and model calculations for sites north (left) and south (right) of 49 \degrees N: The solid line indicates the mean, and the shaded area marks the 25th and 75th percentile. Only sites below 1200 m asl and with at least 15 years of data are included.}
 \end{figure}
 
 
@@ -1170,22 +1184,43 @@ Obs.  &              15 &     2 &                  0.0001 &  (-0.003, 0.0032) & 
 \subsection{Trends in EC and OC, conclusion}
 \label{ss:trendsECOCconc}
 
-\COMMENT{DS to KE: I suggest simplifying the conclusions, making the main points but avoiding the detailed numbers (which have proved sensitive to time-windows. I'll write new text first, leaving the old below, so you can see my suggestions and we can agree...}
+\COMMENT{DS to KE: I suggest simplifying the conclusions, making the main points but avoiding the detailed numbers (which have proved sensitive to time-windows). I'll write new text first, leaving the old below, so you can see my suggestions and we can agree...}
 
 
 \COMMENT{NEW TEXT:\\}
 
-For EC and OC we have calculated observed and modelled trends for 15 sites across Europe for the period 2010--2019. It should be noted that this 10-year period is rather short for the calculation of robust trends (and we show that slightly different time-windows produce different statistics), but some features of the trend analysis seem rather consistent, and we summarise the main points here. 
+For EC and OC we have calculated observed and modelled trends for 15 sites across Europe for the period 2010--2019. It should be noted that this 10-year period is rather short for the calculation of robust trends (and we show that slightly different time-windows produce different statistics), and typically only a limited number of sites showed trends that were statistically significant. However, some features of the trend analysis seem rather consistent, and we summarise the main points here. 
 
-A reduction (ca. -4.5~\%/yr) in observed EC was found across 15 sites across Europe for the  period 
-2010--2019. The reduction in levoglucosan at the site Birkenes in southern Norway (which is significantly impacted by long-range transport of pollution from continental Europe) was found to be over 5\% also, which suggests that emissions from residential wood combustion were reduced significantly over this period. However, observed EC reductions were rather similar levels in all seasons, which suggests that emissions abatement of EC has been successful across a range of emission sources. 
+A reduction (of ca. 4.5~\%/yr) in observed EC was found across 15 sites across Europe for the  period 
+2010--2019. The reduction in levoglucosan at the site Birkenes in southern Norway (which is significantly impacted by long-range transport of pollution from continental Europe) was found to be over 5\% also (though this number was very sensitive to the time-window), which suggests that emissions from residential wood combustion were reduced significantly over this period; this is also consistent with reported changes in the GNFR C emissions. However, observed EC reduction levels were rather similar in all seasons, which suggests that emissions abatement of EC has been successful across a range of emission sources. 
 
-Observed OC levels were also reduced by ca. 4~\%/yr 
+In the winter season (DJF), reductions in observed EC and OC were very similar, with -4.3~\%/yr and -4.2~\%/yr respectively. Given that the winter OC concentrations are mainly determined by primary emissions and with minimal SOA contributions, this consistency of EC and OC reductions is also consistent with reductions in wintertime sources. Trends in observed OC in other seasons were however very mixed, with some stations showing increases, and others decreases, and with little statistical significance. This variability in station-to-station OC trends in other seasons reflects increasing contributions from SOA formation, which are sensitive to meteorological factors and biogenic emissions.
 
-fact thareduction though Concentrations of observed OC were also reduced by a similar
+The modelled trends in EC (reduction of ca. 4~\%/yr) were rather similar to the observed trends, also across all seasons, and the station-mean EC concentrations themselves were well reproduced by the model across the 10 year period. 
+For OC the model substantially underpredicts the yearly concentrations over the whole period, and also underpredicts the trends.  
+
+The underprediction of OC is however readily explainable by the omission of condensable organics in the reported \pmfine emissions from some countries (Sect.~\ref{ss:IssuesECOC}). Although emissions estimates which include condensables (the so-called REF2 or REF2.1, Sect.~\ref{sec:EmisSVOC}) are available and were used in the status and source-receptor calculations of this report, these emissions only exist for 2015 \QUERY{AGNES, please check/confirm}; no time-series of REF2-type emissions yet exists. The lack of significance of the calculated OC trends may also be attributed to some extent to these problems with condensables. When some countries include, and some exclude, condensables, changes in modelled OC concentrations will be very sensitive to changes in the source areas for the POA emissions entering the model.
+Although modelling of EC is also impacted by the problems with condensables, the much better agreement found for wintertime EC levels than for OC probably reflects the fact that EC has a wider variety of emission sources in that season (e.g. vehicles), whereas OC emissions are dominated by residential wood-burning.
+
+\COMMENT{This bit is almost unchanged from original:\\}
+The EC fraction of \pmfine (\QUERY{trend }-2.4$\pm$1.1~\%/yr) decreased at all
+sites, and at a level equal to, or higher than, the \ce{SO4^2-} fraction. The
+change in OC fraction was more scattered with a substantial and
+consistent 4.5~\%/yr increase at the northernmost sites, whereas
+there was no increase or decrease (0.2$\pm$2.8~\%/yr) when considering
+all sites. The influence of OC from natural sources likely has a profound
+impact on the general lack of decrease observed for the OC fraction of
+\pmfine. These observations points to a continuous change in the aerosol
+chemical composition and in the relative source composition across
+Europe. The carbonaceous fraction appears particularly important for a
+further reduction in the observed \pmfine mass concentration in Europe,
+although effort is needed to separate its natural and anthropogenic
+fraction to get a quantitative overview of the abatable fractions.
+\\
+\bigskip
 
 
-\COMMENT{ORIG TEXT:\\}
+\COMMENT{\bigskip ORIG TEXT, DELETE if above is okay:\\}
 
 A -4.5$\pm$1.6~\%/yr reduction in EC was calculated across Europe for
 2010--2019 and the reduction was particularly consistent amongst the
@@ -1218,7 +1253,7 @@ was seen for each season, thereby reproducing the seasonality in trend
 seen for the observations.
 
 The EC fraction of \pmfine (\QUERY{trend }-2.4$\pm$1.1~\%/yr) decreased at all
-sites, and at a level equal as, or higher than, the \ce{SO4^2-} fraction. The
+sites, and at a level equal to, or higher than, the \ce{SO4^2-} fraction. The
 change in OC fraction was more scattered with a substantial and
 consistent 4.5~\%/yr increase at the northernmost sites, whereas
 there was no increase or decrease (0.2$\pm$2.8~\%/yr) when considering
@@ -1229,14 +1264,19 @@ chemical composition and in the relative source composition across
 Europe. The carbonaceous fraction appears particularly important for a
 further reduction in the observed \pmfine mass concentration in Europe,
 although effort is needed to separate its natural and anthropogenic
-fraction to get a quantitative overview of the abatable fractions.
+fraction to get a quantitative overview of the abatable fractions.\\
+
 
 \COMMENT{PUT TEXT FOR EXECUTIVE SUMMARY here and I can move it later:}\\
 
 The observed trends in annual EC and wintertime OC (ca. 4~\%/yr) suggest that abatement measures
-are having some success in reducing these components and PM in geveral. The reductions in levoglocosan also suggest a reduction in RWC emissions .....
+are having some success in reducing these components and PM in general. The reductions in levoglocosan also suggest a reduction in RWC emissions .....
 Problems with condensables impact EC and especially OC ....
 bla bla
+The carbonaceous fraction appears particularly important for a
+further reduction in the observed \pmfine mass concentration in Europe,
+although effort is needed to separate its natural and anthropogenic
+fraction to get a quantitative overview of the abatable fractions.
 
 
 
