Update on Overleaf.

--- a/chapterAPPX_trends.tex
+++ b/chapterAPPX_trends.tex
@@ -8,11 +8,12 @@
 
 \clearpage
 
+\begin{table}
+\caption{\label{tab:sites_trend} The sites used in the trend calculations for the different components and periods, x: 2000-2019, a: 2005-2019, b: 2000-2010, c: 2010-2019}
 \centering{
-%\scalebox{0.65}{%
-\scriptsize{
-\begin{longtable}{l|cccccccccccccccc}
-\caption{\label{tab:sites_trend} The sites used in the trend calculations for the different components and periods, x: 2000-2019, a: 2005-2019, b: 2000-2010, c: 2010-2019}\\
+\scalebox{0.65}{%
+
+\begin{tabular}{l|cccccccccccccccc}
 \toprule
            Code & O$_{3}$ & \soii & SO$_{4}$pm & SO$_{4}$dep & \noii & totNO$_{3}$ & NO$_{3}$pm & HNO$_{3}$ & NO$_{3}$dep & totNH$_{4}$ & NH$_{4}$pm & NH$_{3}$ & NH$_{4}$dep & \PM[10] & \PM[2.5] & EC/OC \\
 \midrule
@@ -77,6 +78,23 @@ FI0017(18)R &  x &   x &    x &      x &   x &    x &    c &    c &      x &    
         FI0036R &  - &   x &    x &      x &   - &    x &    c &    c &      x &    x &    x &   c &      x &    - &    c &     - \\
         FI0037R &  x &   x &    x &      - &   x &    x &    - &    - &      - &    x &    c &   - &      - &    - &    - &     - \\
         FI0096G &  x &   - &    - &      - &   x &    - &    - &    - &      - &    - &    - &   - &      - &    - &    - &     - \\
+\bottomrule
+\end{tabular}
+ }}
+ \end{table}
+
+
+
+
+\begin{table}
+\caption{\label{tab:sites_trend1} Cont. The sites used in the trend calculations for the different components and periods, x: 2000-2019, a: 2005-2019, b: 2000-2010, c: 2010-2019}
+\centering{
+\scalebox{0.65}{%
+
+\begin{tabular}{l|cccccccccccccccc}
+\toprule
+           Code & O$_{3}$ & \soii & SO$_{4}$pm & SO$_{4}$dep & \noii & totNO$_{3}$ & NO$_{3}$pm & HNO$_{3}$ & NO$_{3}$dep & totNH$_{4}$ & NH$_{4}$pm & NH$_{3}$ & NH$_{4}$dep & \PM[10] & \PM[2.5] & EC/OC \\
+\midrule
         FR0008R &  x &   b &    - &      x &   - &    - &    - &    - &      x &    - &    - &   - &      x &    - &    - &     - \\
         FR0009R &  x &   b &    - &      x &   - &    - &    - &    - &      x &    - &    - &   - &      x &    x &    a &     - \\
         FR0010R &  x &   b &    - &      x &   - &    - &    - &    - &      x &    - &    - &   - &      x &    c &    - &     - \\
@@ -162,9 +180,10 @@ SE0011(20)R &  x &   x &    x &      x &   x &    x &    x &    x &      x &    
         SK0006R &  x &   x &    x &      x &   x &    - &    - &    - &      x &    - &    a &   - &      x &    a &    - &     - \\
         SK0007R &  x &   - &    - &      x &   - &    - &    - &    - &      x &    - &    - &   - &      x &    a &    - &     - \\
 \bottomrule
-\end{longtable}
- }
- }
+\end{tabular}
+ }}
+ \end{table}
+ 
 
 %\bibliographystyle{copernicus}
 %\renewcommand\bibname{References}    % Crude - set Bibliography to References
