--- a/chapterEMEPModelUpdates.tex
+++ b/chapterEMEPModelUpdates.tex
@@ -95,41 +95,7 @@ It should be noted that this 19-sector system is designed as a practical super-s
 Table~\ref{tab:GNFRsectors} summarises the new GNFR\_CAMS sectors,
 and the mapping indices used.
 
-\small{
-\begin{longtable}{lrrrrlc}
-\caption{The `GNFR\_CAMS' 19-sector system, and mapping indices for release heights, timefactors and species-splits,
- which is now
- default in EMEP model. \label{tab:GNFRsectors}
-}\\
-\hline
-code & No  & \multicolumn{3}{c}{Index}      & sector & SNAP\\ \cline{3-5}
-     &         & timefac  & height & emissplit  &        & equivalent \\
-\hline
-A &      01 &   1 &  1 &   1 &  Public Power  &  1 \\
-B &      02 &   3 &  3 &   2 &  Industry  & 3, 4 \\
-C &      03 &   2 &  2 &   3 &  Other Stationary Combustion & 2 \\
-%D &      04 &   4 &  4 &   4 &  Fugitive & \QUERY{EXPLAIN/CHECK??}  \\
-%dev:
-D &      04 &   5 &  5 &   4 &  Fugitive & 5 \\ %as in dev 16/8/21
-E &      05 &   6 &  2 &   5 &  Solvents & 6 \\
-F &      06 &   7 &  2 &   6 &  Road Transport & 7 \\
-G &      07 &   8 &  8 &   7 &  Shipping & 8  \\ % dev 16/8
-H &      08 &   8 &  7 &   8 &  Aviation & 8  \\
-I &      09 &   8 &  2 &   9 &  Offroad & 8  \\
-J &     10 &   9 &  6 &  10 &  Waste & 9 \\
-K &     11 &  10 &  2 &  11 &  Agri - Livestock & 10 \\
-L &     12 &  10 &  2 &  12 &  Agri - Other & 10 \\
-M &     13 &   5 &  5 &  13 &  Other & 11 \\
-A1 &    14 &   1 &  1 &   1 &  PublicPower - Point & 1 \\
-A2 &    15 &   1 &  3 &   1 &  PublicPower - Area & 1 \\
-F1 &    16 &   7 &  2 &  16 &  Road Transport - Exhaust Gasoline & 7  \\
-F2 &    17 &   7 &  2 &  17 &  Road Transport - Exhaust Diesel& 7   \\
-F3 &    18 &   7 &  2 &  18 &  Road Transport - Exhaust LPGgas & 7  \\
-F4 &    19 &   7 &  2 &  19 &  Road Transport - NonExhaust Other& 7   \\
-\hline
-\end{longtable}}
-%\clearpage
-\normalsize
+%ORIG \input{tab.tex}
 
 \subsection{Soil NO emissions}
 \label{ssec:soilNO}
@@ -185,6 +151,45 @@ the European region.
   }
 \end{figure}
 
+\clearpage
+
+%\input{tab.tex}
+%\input{tab.tex}
+\begin{table}[H]
+\begin{small}
+\caption{The `GNFR\_CAMS' 19-sector system, and mapping indices for release heights, timefactors and species-splits, which is now default in EMEP model. \label{tab:GNFRsectors}}
+\begin{tabular}{lrrrrlc}
+\hline
+code & No  & \multicolumn{3}{c}{Index}      & sector & SNAP\\ \cline{3-5}
+     &         & timefac  & height & emissplit  &        & equivalent \\
+\hline
+A &      01 &   1 &  1 &   1 &  Public Power  &  1 \\
+B &      02 &   3 &  3 &   2 &  Industry  & 3, 4 \\
+C &      03 &   2 &  2 &   3 &  Other Stationary Combustion & 2 \\
+%D &      04 &   4 &  4 &   4 &  Fugitive & \QUERY{EXPLAIN/CHECK??}  \\
+%dev:
+D &      04 &   5 &  5 &   4 &  Fugitive & 5 \\ %as in dev 16/8/21
+E &      05 &   6 &  2 &   5 &  Solvents & 6 \\
+F &      06 &   7 &  2 &   6 &  Road Transport & 7 \\
+G &      07 &   8 &  8 &   7 &  Shipping & 8  \\ % dev 16/8
+H &      08 &   8 &  7 &   8 &  Aviation & 8  \\
+I &      09 &   8 &  2 &   9 &  Offroad & 8  \\
+J &     10 &   9 &  6 &  10 &  Waste & 9 \\
+K &     11 &  10 &  2 &  11 &  Agri - Livestock & 10 \\
+L &     12 &  10 &  2 &  12 &  Agri - Other & 10 \\
+M &     13 &   5 &  5 &  13 &  Other & 11 \\
+A1 &    14 &   1 &  1 &   1 &  PublicPower - Point & 1 \\
+A2 &    15 &   1 &  3 &   1 &  PublicPower - Area & 1 \\
+F1 &    16 &   7 &  2 &  16 &  Road Transport - Exhaust Gasoline & 7  \\
+F2 &    17 &   7 &  2 &  17 &  Road Transport - Exhaust Diesel& 7   \\
+F3 &    18 &   7 &  2 &  18 &  Road Transport - Exhaust LPGgas & 7  \\
+F4 &    19 &   7 &  2 &  19 &  Road Transport - NonExhaust Other& 7   \\
+\hline
+\end{tabular}
+\end{small}
+\end{table}
+%\clearpage
+%\normalsize
 
 
 \subsubsection{Risk of double-counting?}
@@ -301,7 +306,7 @@ of `remPPM' from GNFR C.
 \subsection{Monthly timefactors for global modelling.}
 \label{ssec:monthlyFacs}
 
-New country-based monthly timefactors were produced for countries outside of Europe. The\hyp{}se factors were derived by making country-average factors from global gridded SNAP-based data from the ECLIPSE v6b dataset. ECLIPSE factors only created for "robust" sectors (SNAP-1, 2, 3, 4, and 10), since other sectors showed either no monthly variation (e.g. traffic), or very sporadic events that are not expected to be representative for all years (e.g. shipping, or waste-burning). For SNAP-10 (agr) the NH3 data are from ECLIPSE `agr\_NH3', otherwise from `agr'.
+New country-based monthly timefactors were produced for countries outside of Europe. These factors were derived by making country-average factors from global gridded SNAP-based data from the ECLIPSE v6b dataset. ECLIPSE factors only created for "robust" sectors (SNAP-1, 2, 3, 4, and 10), since other sectors showed either no monthly variation (e.g. traffic), or very sporadic events that are not expected to be representative for all years (e.g. shipping, or waste-burning). For SNAP-10 (agr) the NH3 data are from ECLIPSE `agr\_NH3', otherwise from `agr'.
 
 
 
