--- a/chapterEMEPModelUpdates.tex
+++ b/chapterEMEPModelUpdates.tex
@@ -109,6 +109,16 @@ the period 2000-2018.  The basic methodology merges methods from
 literature \citep[especially][]{SteinkampLawrence2011}, and some
 simplifications which reflect lack of  availability of some key data.
 
+\begin{figure}[H]
+  \centering
+   \includegraphics*[width=10cm]{FIGS_UPDATES/PlotRegionalTimeSeriesMonthly_EUR_YLnSMI_Mar2021.png}
+  \parbox{10cm}{
+  \caption{CAMS-GLOB-SOIL: monthly above canopy NO emissions (\ngN)  calculated for the year 2010
+     for Europe.
+    \label{fig:SIemis}}
+  }
+\end{figure}
+
 The CAMS-GLOB-SOIL v2.2 NOx inventory
 provides estimate of soil NO emissions from four categories:
 
@@ -141,15 +151,7 @@ the European region.
 %  \label{eqn:Fn}
 %\end{equation} 
 
-\begin{figure}
-  \centering
-   \includegraphics*[width=10cm]{FIGS_UPDATES/PlotRegionalTimeSeriesMonthly_EUR_YLnSMI_Mar2021.png}
-  \parbox{10cm}{
-  \caption{CAMS-GLOB-SOIL: monthly above canopy NO emissions (\ngN)  calculated for the year 2010
-     for Europe.
-    \label{fig:SIemis}}
-  }
-\end{figure}
+
 
 \clearpage
 
