--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -620,6 +620,8 @@ Trend studies of surface ozone requires a somewhat different approach than other
 
 Thus, the selection of ozone metrics is decisive for the estimated trends (ref e.g. Lefohn - TOAR). The annual mean concentration used for evaluating other species is of little interest when studying ozone. A common procedure is to look at the trend in the probability distribution of ozone, e.g. by calculating trends for various percentiles of the distribution.  
 
+[Ref: Lefohn, A.S., Malley, C.S., Smith, L., Wells, B., Hazucha, M., Simon, H., Naik, V., Mills, G., Schultz, M.G., Paoletti, E., De Marco, A., Xu, X., Zhang, L., Wang, T., Neufeld, H.S., Musselman, R.C., Tarasick, D., Brauer, M., Feng, Z., Tang, H., Kobayashi, K., Sicard, P., Solberg, S., Gerosa, G., 2018. Tropospheric ozone assessment report: Global ozone metrics for climate change, human health, and crop/ecosystem research. Elementa: Science of the Anthropocene 6, 27. https://doi.org/10.1525/elementa.279]
+
 As explained above, the trends in six percentiles (10, 50, 75, 95, 98 and 99) of the daily maximum O$_3$ values were calculated for stations with at least 330 valid daily data each year. This corresponds to 90 \% data capture in the individual years. The 10th percentile corresponds to the 37th lowest daily maximum value while the 99th percentile corresponds to the 4th highest daily maximum. 
 
 Figure \ref{fig:O3_boxplot} shows the calculated Sen's slopes for these six percentiles for the period 2000-2019 for EMEP sites north and south of 49 \degrees N based on observed and modelled data. Both significant and non-significant slopes were included, but stations above 1200 m altitude were not included in the trend statistics. The reason for differing the altitude criteria for trend calculations vs that for evaluating the 2019 levels as discussed in Ch 2.4 (1200 m vs 500 m) was that the latter is more focused on individual daily data whereas the trends are based on aggregated statistics (annual data). 
@@ -649,9 +651,9 @@ In addition to the mean trends, the confidence intervals for these mean values a
 [ref: Davison, A.C., Hinkley, D.V., 1997. Bootstrap Methods and their Application, Cambridge Series in Statistical and Probabilistic Mathematics. Cambridge University Press, Cambridge. https://doi.org/10.1017/CBO9780511802843]
 
 
-First of all, it is interesting to note that negative (downward) trends are found for all the five metrics both north and south of 49 \degrees N and for both observed and modelled data. This is a strong signal that there has been a real reduction in these ozone metrics during the 2000-2019 period. Furthermore, for sites north of 49 \degrees N, the results indicate that there are no significant difference between the observed and modelled trends in the 75th and 99th percentiles. For sites south of 49 \degrees N the mean absolute trends agree very well for the observed and modelled data, but the relative changes in the observations are clearly lower than the modelled changes (reflecting that the model underpredicts the absolute level of the high percentiles). It could be noted that the number of statistically significant trends are considerably lower for the observed data compared to the modelled ones. 
+First of all, it is interesting to note that downward trends are found for all the five metrics both north and south of 49 \degrees N and for both observed and modelled data. This is a strong signal that there has been a real reduction in these ozone metrics during the 2000-2019 period. Furthermore, for sites north of 49 \degrees N, the results indicate that there are no significant difference between the observed and modelled trends in the 75th and 99th percentiles. For sites south of 49 \degrees N the mean absolute trends agree very well for the observed and modelled data, but the relative changes in the observations are clearly lower than the modelled changes (reflecting that the model underpredicts the absolute level of the high percentiles). It could be noted that the number of statistically significant trends are considerably lower for the observed data compared to the modelled ones. 
 
-For SOMO35 and AOT40 the number of sites with significant trends in the observations are rather low and substantially lower than the number of statistically significant modelled trends. For all three metrics the model calculates stronger mean reductions than observed. For SOMO35 north of 49 \degrees N, the mean observed and modelled absolute trends are very close, but the relative trend is larger for the modelled mean since the general modelled levels of SOMO35 are higher than observed.
+For SOMO35 and AOT40 the number of sites with significant trends in the observations are rather low and substantially lower than the number of statistically significant modelled trends. For all three metrics the model calculates stronger mean reductions than observed. For SOMO35 north of 49 \degrees N, the mean observed and modelled absolute trends are very close, but the modelled relative trend is somewhat larger than observed.
 
 
 
@@ -701,10 +703,6 @@ Period & Area & Parameter &           total & obs & mod &                    obs
 	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/alltrends_south_49_2000_2019_1200m.png}
 	\caption{\label{fig:O3_perctrends_S}Trends in annual percentiles of daily max O$_3$ from 2000-2019 for EMEP observations and model calculations for sites south of 49 \degrees N: The solid line indicates the mean, and the shaded area marks the 25th and 75th percentile. Only sites below 1200 m asl and with at least 15 years of data are included.}
 \end{figure}
-
-
-Figures \ref{fig:O3_aot40croptrends} - \ref{fig:O3_somo35trends} show the station-wise spread in observed and modelled data 2000-2019 for the 3-months AOT40 for crops, 6-months AOT40 for forests and the SOMO35 for stations north and south of 40 \degrees N, respectively. For SOMO35, the model agrees very well with the observations both with respect to absolute levels and with respect to trends although an underestimation is seen in extreme year 2003. For the AOT40 values, the model overestimates the levels for both the 3-months and 6-months AOT40s, and the bias is particularly strong for the southern sites. As mentioned above, model predictions of AOT40 levels are particularly challenging since the background O$_3$ concentrations used at the model boundaries become very important.
-
 
 \begin{figure}[h]
 	\centering
@@ -1202,8 +1200,8 @@ In the winter season (DJF), reductions in observed EC and OC were very similar, 
 The modelled trends in EC (reduction of ca. 4~\%/yr) were rather similar to the observed trends, also across all seasons, and the station-mean EC concentrations themselves were well reproduced by the model across the 10 year period. 
 For OC the model substantially underpredicts the yearly concentrations over the whole period, and also underpredicts the trends.  
 
-The underprediction of OC is however readily explainable by the omission of condensable organics in the reported \pmfine emissions from some countries (Sect.~\ref{ss:IssuesECOC}). Although emissions estimates which include condensables (the so-called REF2 or REF2.1, Sect.~\ref{sec:EmisSVOC}) are available and were used in the status and source-receptor calculations of this report, these emissions only exist for 2015 \QUERY{AGNES, please check/confirm}; no time-series of REF2-type emissions yet exists. The lack of significance of the calculated OC trends may also be attributed to some extent to these problems with condensables. When some countries include, and some exclude, condensables, changes in modelled OC concentrations will be very sensitive to changes in the source areas for the POA emissions entering the model.
-Although modelling of EC is also impacted by the problems with condensables, the much better agreement found for wintertime EC levels than for OC probably reflects the fact that EC has a wider variety of emission sources in that season (e.g. vehicles), whereas OC emissions are dominated by residential wood-burning.
+The underprediction of OC is however explainable by the omission of condensable organics in the reported \pmfine emissions from some countries (Sect.~\ref{ss:IssuesECOC}). Although emissions estimates which include condensables (the so-called REF2 or REF2.1, Sect.~\ref{sec:EmisSVOC}) are available and were used in the status and source-receptor calculations of this report, these emissions only exist for 2015; no time-series of REF2-type emissions yet exists. The lack of significance of the calculated OC trends may also be attributed to some extent to these problems with condensables. When some countries include, and some exclude, condensables, changes in modelled OC concentrations will be very sensitive to changes in the source areas for the POA emissions entering the model.
+Although modelling of EC is also impacted by the problems with condensables, the much better agreement found for wintertime EC levels than for OC probably reflects the fact that EC has a wider variety of emission sources in that season (e.g. vehicles) than OC, which is much more dominated by residential wood-burning.
 
 \COMMENT{This bit is almost unchanged from original:\\}
 The EC fraction of \pmfine (\QUERY{trend }-2.4$\pm$1.1~\%/yr) decreased at all
