--- a/chapterAPPX_trends.tex
+++ b/chapterAPPX_trends.tex
@@ -87,7 +87,8 @@ FI0017(18)R &  x &   x &    x &      x &   x &    x &    c &    c &      x &    
 
 
 \begin{table}
-\caption{\label{tab:sites_trend1} Cont. The sites used in the trend calculations for the different components and periods, x: 2000-2019, a: 2005-2019, b: 2000-2010, c: 2010-2019}
+\renewcommand\thetable{}
+\caption{C:1 Cont. The sites used in the trend calculations for the different components and periods, x: 2000-2019, a: 2005-2019, b: 2000-2010, c: 2010-2019}
 \centering{
 \scalebox{0.65}{%
 
@@ -161,6 +162,24 @@ NO0001(2)R &  x &   x &    x &      - &   x &    x &    x &    x &      - &    x
         RU0001R &  - &   b &    - &      - &   - &    - &    - &    - &      - &    - &    - &   - &      - &    - &    - &     - \\
         RU0018R &  - &   - &    - &      x &   - &    - &    - &    - &      x &    - &    x &   - &      x &    - &    - &     - \\
         RU0020R &  - &   c &    - &      - &   - &    - &    - &    - &      x &    - &    c &   - &      x &    - &    - &     - \\
+\bottomrule
+\end{tabular}
+ }}
+ \end{table}
+
+
+
+\clearpage
+\begin{table}[H]
+\renewcommand\thetable{}
+\caption{C:1 Cont. The sites used in the trend calculations for the different components and periods, x: 2000-2019, a: 2005-2019, b: 2000-2010, c: 2010-2019}
+\centering{
+\scalebox{0.65}{%
+
+\begin{tabular}{l|cccccccccccccccc}
+\toprule
+           Code & O$_{3}$ & \soii & SO$_{4}$pm & SO$_{4}$dep & \noii & totNO$_{3}$ & NO$_{3}$pm & HNO$_{3}$ & NO$_{3}$dep & totNH$_{4}$ & NH$_{4}$pm & NH$_{3}$ & NH$_{4}$dep & \PM[10] & \PM[2.5] & EC/OC \\
+\midrule
         SE0002R &  - &   - &    - &      - &   - &    - &    - &    - &      - &    - &    - &   - &      - &    - &    - &     - \\
         SE0005R &  x &   x &    x &      x &   x &    x &    x &    x &      x &    x &    x &   x &      - &    c &    c &     - \\
         SE0008R &  - &   b &    b &      - &   b &    - &    - &    - &      - &    - &    - &   - &      - &    - &    - &     - \\
@@ -183,7 +202,7 @@ SE0011(20)R &  x &   x &    x &      x &   x &    x &    x &    x &      x &    
 \end{tabular}
  }}
  \end{table}
- 
+\vfill
 
 %\bibliographystyle{copernicus}
 %\renewcommand\bibname{References}    % Crude - set Bibliography to References
