--- a/report.tex
+++ b/report.tex
@@ -335,7 +335,7 @@
 %%%%%%%%%%%%%%%%% Compile ONLY selected Chapters %%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %\includeonly{acknow}
-%\includeonly{chapterStatus2019,chapterTrendsSandN,chapterEMEPModelUpdates}
+%\includeonly{chapterStatus2019,chapterTrendsSandN,chapterAPPX_ModelEval}
 %\includeonly{chapterMeasurementDevelopments}
 
 %Please:if you use includeonly on overleaf, just do it temporary and set it back after you have compiled (since others will only see 'your chapter')
